# jot

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMMANDS.md  DEVELOPMENT.md
src/jot/: __main__.py  cli.py  config.py  frontmatter.py  git_util.py  mcp_server.py  note.py  vault.py
src/jot/commands/: capture.py  config_cmd.py  create.py  find.py  links.py  organize.py  publish.py  query.py  tags.py  tasks.py  template.py  views.py
tests/: conftest.py  test_cli.py  test_frontmatter.py  test_mcp_server.py  test_note.py  test_vault.py
