[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jot"
version = "0.4.0"
description = "YANP vault CLI — plain markdown notes, wikilinks, publish"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.scripts]
jot = "jot.cli:cli"
jot-mcp = "jot.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
